--- a/css/index.css
+++ b/css/index.css
@@ -372,6 +372,7 @@ samp {
   -ms-flex-align: start;
   align-items: start;
   padding: 1rem;
+  position: relative;
   background-color: white;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   text-align: left;
@@ -419,7 +420,7 @@ samp {
   display: inline-flex;
   flex-direction: column;
   position: absolute;
-  left: 26rem;
+  left: 25.5rem;
   z-index: 1;
   color: white;
 }
@@ -455,25 +456,39 @@ samp {
 } */
 
 .food-grid {
+  flex: 0 0 auto;
+  padding: 1rem;
+  width: 50%;
+  background-color: transparent;
+  box-shadow: none;
 }
 
-.food-grid > .food-img > img {
+.food-grid > .food-content {
+  display: flex;
+  flex-direction: column-reverse;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  z-index: 1;
+  color: white;
+}
+
+.food-grid > .food-content > .food-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.food-grid > .food-content > .food-img > img {
   display: block;
   width: 100%;
   height: auto;
   transition: transform 0.4s ease-in-out;
 }
 
-.food-grid > .food-img:hover > img {
-  transform: scale(1.3);
-  transform-origin: 50% 50%;
-}
-
-.food-grid > .food-img:hover::after {
-  opacity: 0;
-}
-
-.food-grid > .food-img::after {
+.food-grid > .food-content > .food-img::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -482,34 +497,38 @@ samp {
   content: '';
   background-image: linear-gradient(
     to bottom,
-    rgba($black, 0) 0%,
-    rgba($black, 0.5) 100%
+    rgba(black, 0) 0%,
+    rgba(black, 0.5) 100%
   );
   opacity: 1;
   transition: opacity 0.4s ease-in-out;
 }
 
-.food-grid > .food-content {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 1rem;
-  z-index: 1;
-  color: white;
+.food-grid > .food-content > .food-img:hover > img {
+  transform: scale(1.3);
+  transform-origin: 50% 50%;
 }
 
-/* h2 */
+.food-grid > .food-content > .food-img:hover::after {
+  opacity: 0;
+}
+
 .food-grid > .food-content > .food-title {
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
   font-weight: 800;
 }
 
 .food-grid > .food-content > .food-subtitle {
   display: inline-flex;
+  justify-content: start;
+  align-items: center;
 }
 
 .food-grid > .food-content > .food-subtitle > .badge {
   flex-shrink: 1;
+  margin-right: 0.5rem;
 }
 
 .food-grid > .food-content > .food-subtitle > .caption {
@@ -518,7 +537,12 @@ samp {
 }
 
 .food-list > .food-content > .food-description {
-  color: #6c757d;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: gray;
 }
 
 /* icon button */
