--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-/* color: #12a3d3; */
-/* color: #0ca3d3; */
-
 /* base */
 * {
   font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue',
@@ -51,9 +48,7 @@ samp {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  margin-right: 0.25rem;
-  margin-bottom: 0.5rem;
-  margin-left: 0.25rem;
+  margin: 0.25rem;
   padding-top: 0.5rem;
   padding-right: 0.875rem;
   padding-bottom: 0.5rem;
@@ -69,7 +64,7 @@ samp {
 }
 
 .button-active {
-  background-color: #12a3d3 !important;
+  background-color: #12a3d3;
   color: white;
 }
 
@@ -86,7 +81,7 @@ samp {
   padding-left: 0.875rem;
   font-weight: 400;
   color: black;
-  background-color: #dee2e6;
+  background-color: #d6d6d6;
   background-clip: padding-box;
   border: none;
 }
@@ -97,7 +92,7 @@ samp {
   width: 100%;
   color: black;
   vertical-align: top;
-  border-color: darkgray;
+  border-color: lightgray;
 }
 
 .table > :not(caption) > * > * {
@@ -143,8 +138,8 @@ samp {
 /* grid system */
 .container {
   width: 100%;
-  padding-right: 1.125rem;
-  padding-left: 1.125rem;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
   margin-right: auto;
   margin-left: auto;
 }
@@ -281,13 +276,41 @@ samp {
   align-items: baseline;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.flex-shrink {
+  flex-shrink: 1 !important;
+}
+
+.flex-grow {
+  flex-grow: 1 !important;
+}
+
+.grid {
+  display: grid;
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
 .w-full {
   width: 100%;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   .container {
     max-width: 540px;
+  }
+
+  .grid-1 {
+    grid-template-columns: 1fr;
+  }
+
+  .overflow-x-auto {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
   }
 }
 
@@ -323,6 +346,10 @@ samp {
   .justify-md-end {
     justify-content: flex-end !important;
   }
+
+  .grid-md-2 {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (min-width: 992px) {
@@ -331,16 +358,29 @@ samp {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1440px) {
   .container {
-    max-width: 1140px;
+    max-width: 1238px;
   }
+}
+
+/* alignment */
+.text-right {
+  text-align: right !important;
 }
 
 /* module */
 /* ----- */
 
 /* ad */
+.ads {
+  width: 300px;
+}
+
+.ads > img {
+  width: 100%;
+}
+
 .ads > img:last-child {
   position: sticky;
   top: 0;
@@ -352,9 +392,9 @@ samp {
   padding-left: 0.5rem;
   padding-bottom: 0.25rem;
   padding-right: 0.5rem;
-  background-color: #0dcaf0;
+  background-color: #19a2cf;
   color: white;
-  font-size: 0.75rem;
+  font-size: 1rem;
   text-align: center;
 }
 
@@ -368,18 +408,13 @@ samp {
 
 /* food */
 #foods {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -0.75rem;
-  margin-left: -0.75rem;
+  -webkit-overflow-scrolling: touch;
+  white-space: wrap;
 }
 
 @media (max-width: 576px) {
   #foods {
-    display: block;
-    overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-    white-space: nowrap;
   }
 }
 
@@ -393,6 +428,67 @@ samp {
   text-align: left;
 }
 
+.food__list {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.food__list > .food__img {
+  margin-right: 1.5rem;
+}
+
+.food__list > .food__img > img {
+  width: 15rem;
+  height: auto;
+}
+
+.food__list > .food__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  position: relative;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+}
+
+.food__list > .food__content > .food__title {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  color: black;
+  font-size: 2rem;
+}
+
+.food__list > .food__content > .food__subtitle {
+  display: inline-flex;
+  flex-direction: column;
+  position: absolute;
+  top: -1rem;
+  left: -301px;
+  z-index: 1;
+  color: white;
+}
+
+.food__list > .food__content > .food__subtitle > .badge {
+  flex-shrink: 1;
+  margin-bottom: 0.5rem;
+}
+
+.food__list > .food__content > .food__subtitle > .food__caption {
+  margin-right: 0.5rem;
+  color: gray;
+  writing-mode: tb-rl;
+}
+
+.food__list > .food__content > .food__description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  color: gray;
+}
+
 @media (max-width: 576px) {
   .food {
     display: flex;
@@ -403,116 +499,84 @@ samp {
     text-align: left;
   }
 
-  .food-list > .food-img {
+  .food__list > .food__img {
     width: 100%;
   }
 
-  .food-list > .food-img > img {
+  .food__list > .food__img > img {
     width: 100% !important;
     height: auto !important;
   }
 
-  .food-list > .food-content > .food-subtitle {
-    flex-direction: row !important;
-    align-items: center !important;
-    position: relative !important;
-    left: unset !important;
+  .food__list > .food__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    position: relative;
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
   }
 
-  .food-list > .food-content > .food-subtitle > .badge {
+  .food__list > .food__content > .food__title {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+  }
+
+  .food__list > .food__content > .food__subtitle {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: unset;
+    left: unset;
+    color: white;
+  }
+
+  .food__list > .food__content > .food__subtitle > .badge {
     margin-right: 0.5rem;
     margin-bottom: 0 !important;
   }
 
-  .food-list > .food-content > .food-subtitle > .caption {
+  .food__list > .food__content > .food__subtitle > .food__caption {
     writing-mode: unset !important;
+  }
+
+  .food__list > .food__content > .food__description {
+    margin-bottom: 0;
+    font-size: 1rem;
   }
 }
 
-.food-list {
+.food__table .food__table--color-gray {
+  color: gray !important;
+}
+
+.food__grid {
+  padding: 0;
+  position: relative;
   width: 100%;
-  margin-bottom: 1rem;
-}
-
-.food-list > .food-img {
-  margin-right: 0.5rem;
-}
-
-.food-list > .food-img > img {
-  width: 15rem;
-  height: auto;
-}
-
-.food-list > .food-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  position: relative;
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
-}
-
-.food-list > .food-content > .food-title {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  color: black;
-}
-
-.food-list > .food-content > .food-subtitle {
-  display: inline-flex;
-  flex-direction: column;
-  position: absolute;
-  left: -20rem;
-  z-index: 1;
-  color: white;
-}
-
-.food-list > .food-content > .food-subtitle > .badge {
-  flex-shrink: 1;
-  margin-bottom: 0.5rem;
-}
-
-.food-list > .food-content > .food-subtitle > .caption {
-  margin-right: 0.5rem;
-  color: gray;
-  writing-mode: tb-rl;
-}
-
-.food-list > .food-content > .food-description {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  color: gray;
-}
-
-.food-grid {
-  flex: 0 0 auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  position: relative;
-  width: 50%;
-  height: 200px;
+  max-height: 220px;
   background-color: transparent;
   box-shadow: none;
   overflow: hidden;
 }
 
-.food-grid > .food-img {
+.food__grid > .food__img {
   position: relative;
+  width: 100%;
   overflow: hidden;
 }
 
-.food-grid > .food-img > img {
+.food__grid > .food__img > img {
   display: block;
   width: 100%;
   height: auto;
   transition: transform 0.4s ease-in-out;
 }
 
-.food-grid > .food-img::after {
+.food__grid > .food__img::after {
   position: absolute;
   top: 0;
   left: 0;
@@ -522,88 +586,100 @@ samp {
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgba(0, 0, 0, 0.6) 100%
   );
   opacity: 1;
 }
 
-.food-grid:hover > .food-img > img {
+.food__grid:hover > .food__img > img {
+  object-fit: cover;
   transform: scale(1.3);
   transform-origin: 50% 50%;
 }
 
-.food-grid > .food-content {
+.food__grid > .food__content {
   position: absolute;
   bottom: -4rem;
   left: 0;
   width: 100%;
   z-index: 1;
-  padding-right: 2rem;
-  padding-left: 2rem;
-  padding-bottom: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  padding-bottom: 0.5rem;
   color: white;
   transition: all 0.4s ease-in-out;
 }
 
-.food-grid > .food-content > .food-title {
+.food__grid > .food__content > .food__title {
   margin-top: 0.5rem;
   margin-bottom: 1rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 800;
 }
 
-.food-grid > .food-content > .food-subtitle {
+.food__grid > .food__content > .food__subtitle {
   display: inline-flex;
   justify-content: start;
   align-items: center;
 }
 
-.food-grid > .food-content > .food-subtitle > .badge {
+.food__grid > .food__content > .food__subtitle > .badge {
   flex-shrink: 1;
   margin-right: 0.5rem;
 }
 
-.food-grid > .food-content > .food-subtitle > .caption {
+.food__grid > .food__content > .food__subtitle > .food__caption {
   font-style: italic;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
-.food-grid > .food-content > .food-description {
-  height: 2.4rem;
+.food__grid > .food__content > .food__description {
+  height: 32px;
   overflow: hidden;
   text-overflow: ellipsis;
   color: white;
   opacity: 0;
+  transition: all 0.4s ease-in-out;
 }
 
-.food-grid:hover > .food-content {
+.food__grid:hover > .food__content {
   bottom: -1rem;
 }
 
-.food-grid:hover > .food-content > .food-description {
+.food__grid:hover > .food__content > .food__description {
   opacity: 1;
 }
 
 @media (max-width: 576px) {
-  .food-grid {
+  .food__grid {
     padding-right: 0;
     padding-left: 0;
     width: 100%;
   }
 
-  .food-grid > .food-content {
+  .food__grid > .food__content {
     bottom: -3.5rem;
     padding-right: 1rem;
     padding-left: 1rem;
   }
 }
 
+/* mode switcher */
+#mode-switcher > label {
+  color: #b0aebb;
+}
+
+#mode-switcher .button-active {
+  background-color: transparent;
+}
+
+#mode-switcher .button-active > svg {
+  fill: black !important;
+}
+
 /* icon button */
 .button-icon {
-  padding-top: 0.5rem;
-  padding-right: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.5rem;
+  padding: 0;
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -654,6 +730,12 @@ samp {
   }
   100% {
     stroke-dashoffset: -150;
+  }
+}
+
+@media (max-width: 576px) {
+  .page__title {
+    font-size: 1.75rem;
   }
 }
 
